Put method updated
