# src/Routes/taskRoutes.ts
@@ -14,8 +14,8 @@ router.get("/getAll", async (req: Request, res: Response) => {
     return res.status(response.error ? 400 : 200).send(response)
 })
 
-router.patch("/update", async (req: Request, res: Response) => {
-    const response = await controller.update(req.body)
+router.put("/update/:id", async (req: Request, res: Response) => {
+    const response = await controller.update(req.params.id, req.body)
     return res.status(response.error ? 400 : 200).send(response)
 })
 
